--- a/wiki/encyclopedia/templates/encyclopedia/error.html
+++ b/wiki/encyclopedia/templates/encyclopedia/error.html
@@ -1,6 +1,6 @@
 {% extends "encyclopedia/layout.html" %}
 {% block body %}
-<p style="font-size: large; text-align: center; vertical-align: msiddle;">
-    This Page already exists
+<p style="position: absolute; font-size: large; top: 50%;left: 50%;transform: translate(-50%, -50%);text-align: center; vertical-align: middle;font-family: sans-serif;" >
+    {{ error_message }}
 </p>
     {% endblock %}
