Sundays edit on wiki

--- a/wiki/encyclopedia/templates/encyclopedia/edit.html
+++ b/wiki/encyclopedia/templates/encyclopedia/edit.html
@@ -1,7 +1,8 @@
 {% extends "encyclopedia/layout.html" %}
 {% block body %}
-    <form action="{% url 'edit' %}" method="post"> 
+    <form action="{% url 'edit' title=title %}" method="post"> 
         {% csrf_token %}
+        <p style="text-align: right;"><input type="submit" value="Save Entry"></p>
         <br><label for="{{  form.content.id_for_label }}"> Edit with Markup</label><br>
         {{ form.content }}
     </form>      
