--- a/wiki/encyclopedia/templates/encyclopedia/entry.html
+++ b/wiki/encyclopedia/templates/encyclopedia/entry.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block body %}
     <p style="text-align: center;">
-        <a href="{% url 'edit' entry.title %}">
+        <a href="{% url 'edit' title=title %}">
             Edit this entry
         </a>
     </p>
